k8s/workspace-k8s-yaml/workspace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workspace-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: workspace
  namespace: theiacloud
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - 34.149.147.106.nip.io
    secretName: workspace-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: 34.149.147.106.nip.io
    http:
      paths:
      - backend:
          service:
            name: workspace-service
            port:
              number: 8081
        path: /*
        pathType: ImplementationSpecific
